# beacon

./: .gitignore  Cargo.toml  LICENSE  README.md  bpm_config.toml
bpm/: Cargo.toml  config.toml
bpm/src/: config.rs  db.rs  fetch.rs  main.rs  package.rs
bpm/src/source/: mod.rs
bpmpack/: Cargo.toml
bpmpack/src/: main.rs
crates/bpm/: Cargo.toml  config.toml
crates/bpm/src/: app.rs  args.rs  config.rs  db.rs  fetch.rs  macros.rs  main.rs  package.rs  provider.rs  search.rs  version.rs
crates/bpm/src/app/: list.rs
crates/bpm/src/source/: filesystem.rs  http.rs
crates/bpm_version_compare/: Cargo.toml
crates/bpm_version_compare/src/: lib.rs  main.rs
crates/bpmd/: Cargo.toml
crates/bpmd/src/: main.rs
crates/bpmpack/: Cargo.toml  todo.md
crates/bpmpack/src/: args.rs  lib.rs  main.rs
crates/bpmutil/: Cargo.toml
crates/bpmutil/src/: lib.rs  status.rs
crates/fssearch/: Cargo.toml
crates/fssearch/src/: lib.rs  main.rs
crates/hash_stream/: Cargo.toml
crates/hash_stream/src/: lib.rs
crates/hashdir/: Cargo.toml
crates/hashdir/src/: main.rs
crates/httpsearch/: Cargo.toml
crates/httpsearch/src/: lib.rs  main.rs  masync.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/scan_result/: Cargo.toml
crates/scan_result/src/: lib.rs
crates/swiss/: Cargo.toml
crates/swiss/src/: lib.rs  main.rs  swiss_blake3.rs  swiss_tar.rs  swiss_zstd.rs  version_compare.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
crates/walk_example/: Cargo.toml
crates/walk_example/src/: main.rs
crates/zstd_patch/: Cargo.toml
crates/zstd_patch/src/: main.rs
hash_stream/: Cargo.toml
hash_stream/src/: lib.rs
httpsearch/: Cargo.toml
httpsearch/src/: lib.rs
packer/: Cargo.toml
packer/src/: main.rs
