[workspace]
resolver = "2"

members = [
    "crates/bpm",
    "crates/bpmd",
    "crates/bpmpack",
    "crates/bpmutil",
    "crates/fssearch",
    #"crates/hash_stream",
    "crates/hashdir",
    "crates/httpsearch",
    "crates/package",
    "crates/version",
    "crates/walk_example",
    "crates/zstd_patch",
]

[profile.release]
debug = false
strip = true

[profile.tiny]
inherits = "release"
debug = false
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = "abort"

[workspace.lints.clippy]
needless_return = "allow"

[workspace.dependencies]
anyhow = "1.0.69"
blake3 = "1.3.3"
camino = "1.1.1"
chrono = { version = "0.4.23", features = ["serde"] }
clap = "4.1.4"
indicatif = "0.17.3"
regex = "1.7.0"
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
tabwriter = "1.2.1"
tar = "0.4.38"
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
walkdir = "2.3.2"
zstd = "0.12.0"

#serde_yaml = "0.9.19"
