[package]
name = "bpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bpmutil    = { path = "../bpmutil" }
fssearch   = { path = "../fssearch" }
httpsearch = { path = "../httpsearch" }
package    = { path = "../package" }
version    = { path = "../version" }
bpmpack    = { path = "../bpmpack", optional=true }

anyhow = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true, features = ["serde1"]}
chrono = { workspace = true, features = ["serde"]}
clap = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_derive = { workspace = true }
serde_json = { workspace = true }
tabwriter = { workspace = true }
tar = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true, features = ["zstdmt"]}
tracing-subscriber = { workspace = true, features = ["env-filter"] }

directories = "5.0.1"
humantime = "2.1.0"
itertools = "0.10.5"
version-compare = "0.1.1"

[features]
default = ["pack"]
pack = ["dep:bpmpack"]
