[package]
name = "bpm"
version = "0.2.9-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bpmutil    = { path = "../bpmutil" }
fssearch   = { path = "../fssearch" }
httpsearch = { path = "../httpsearch" }
package    = { path = "../package" }
version    = { path = "../version" }
bpmpack    = { path = "../bpmpack", optional=true }
swiss      = { path = "../swiss", optional=true }

anyhow = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["cargo"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
directories = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_derive = { workspace = true }
serde_json = { workspace = true }
tabwriter = { workspace = true }
tar = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
version-compare = { workspace = true }
walkdir = { workspace = true }
wild = { workspace = true }
zstd = { workspace = true, features = ["zstdmt"] }

[features]
default = ["pack", "rustls", "swiss"]
pack = ["dep:bpmpack"]
swiss = ["dep:swiss"]

# httpsearch tls options
rustls = ["httpsearch/rustls"]
nativessl = ["httpsearch/nativessl"]
