[package]
name = "bpmpack"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpmpack"

[[bin]]
name = "bpmpack"

[lints]
workspace = true

[dependencies]
package   = {"path" = "../package"}
version   = {"path" = "../version"}
anyhow    = { workspace = true }
blake3    = { workspace = true }
camino    = { workspace = true, features = ["serde1"]}
clap      = { workspace = true }
indicatif = { workspace = true }
semver    = { workspace = true }
tabwriter = { workspace = true }
tar       = { workspace = true }
toml      = { workspace = true, features = ["preserve_order"] }
tracing   = { workspace = true }
uuid      = { workspace = true, features = ["v4"] }
wild      = { workspace = true }
zstd      = { workspace = true, features = ["zstdmt"]}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ignore    = "0.4.20"
humansize = "2.1.3"
tempfile  = "3.8.1"

#ignore = "0.4.18" # .gitignore style matching
#semver = "0.9.0"

[features]
default = ["mt"]
mt = []
