[package]
name = "bpmpack"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpmpack"

[[bin]]
name = "bpmpack"

[lints]
workspace = true

[dependencies]
package   = {"path" = "../package"}
version   = {"path" = "../version"}
anyhow    = { workspace = true }
blake3    = { workspace = true }
camino    = { workspace = true, features = ["serde1"]}
clap      = { workspace = true }
humansize = { workspace  = true }
ignore    = { workspace = true }
indicatif = { workspace = true }
semver    = { workspace = true }
tabwriter = { workspace = true }
tar       = { workspace = true }
tempfile  = { workspace = true }
toml      = { workspace = true, features = ["preserve_order"] }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid      = { workspace = true, features = ["v4"] }
wild      = { workspace = true }
zstd      = { workspace = true, features = ["zstdmt"]}

[dev-dependencies]
serde_json = { workspace = true }

#ignore = "0.4.18" # .gitignore style matching
#semver = "0.9.0"

[features]
default = ["mt"]
mt = []
