[package]
name = "bpmutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
static_assertions = { workspace = true }
