[package]
name = "fssearch"
version = "0.1.0"
edition = "2021"

[lib]
name = "fssearch"

[[bin]]
name = "fssearch"

[dependencies]
package = { path = "../package" }

anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"]}
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

ignore = "0.4.20"
