[package]
name = "fssearch"
version = "0.4.0"
edition = "2021"

[lib]
name = "fssearch"

[[bin]]
name = "fssearch"

[dependencies]
package = { path = "../package" }
version = { path = "../version" }
scan_result = { path = "../scan_result" }

anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"]}
ignore = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap.workspace = true
