[package]
name = "httpsearch"
version = "0.1.0"
edition = "2021"

[lib]
name = "httpsearch"

[[bin]]
name = "httpsearch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
package = { path = "../package" }
version = { path = "../version" }

anyhow = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

reqwest = { version = "0.11.14", default-features=false, features = ["blocking"] }
scraper = "0.15.0"
url = "2.4.0"

[features]
default = []
rustls = ["reqwest/rustls-tls"]
nativessl = ["reqwest/native-tls"]
nativessl-vendored = ["reqwest/native-tls-vendored"]
