[package]
name = "httpsearch"
version = "0.4.1"
edition = "2024"
[lib]
name = "httpsearch"

[[bin]]
name = "httpsearch"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
package = { path = "../package" }
version = { path = "../version" }
scan_result = { path = "../scan_result" }

anyhow = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

reqwest = { version = "0.11.14", default-features=false, features = ["blocking", "json"] }
scraper = "0.15.0"
url = "2.4.0"
tokio = { version = "1.43.0", features = ["full", "rt"] }
clap.workspace = true

[features]
default = []
rustls = ["reqwest/rustls-tls"]
nativessl = ["reqwest/native-tls"]
nativessl-vendored = ["reqwest/native-tls-vendored"]
