[package]
name = "package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpmutil = { path = "../bpmutil" }

anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"]}
indicatif = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_derive = { workspace = true }
serde_json = { workspace = true, optional = true }
tar = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
zstd = { workspace = true, features = ["zstdmt"]}

#serde_yaml = { version = "0.9.21", optional = true }

[features]
default = ["json"]
#toml = ["dep:toml"]
#yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
