[package]
name = "package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bpmutil = { path = "../bpmutil" }

anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
indicatif = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true } 
tar = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zstd = { workspace = true, features = ["zstdmt"] }
sonic-rs = "0.4.0"

[features]
default = []
sonic_json = []
#default = ["json"]
#toml = ["dep:toml"]
#yaml = ["dep:serde_yaml"]
#json = ["dep:serde_json"]
