[package]
name = "scan_result"
version = "0.2.0"
edition = "2024"

[dependencies]
version = { "path" = "../version" }
package = { "path" = "../package" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
