[package]
name = "swiss"
version = "0.3.0"
edition = "2024"

[lib]
name = "swiss"

[[bin]]
name = "swiss"

[dependencies]
version.path = "../version"
package.path = "../package"
bpm_version_compare.path = "../bpm_version_compare"
anyhow.workspace = true
blake3.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
tar.workspace = true
wild.workspace = true
zstd = {workspace = true, features = ["zstdmt"] }

[lints]
workspace = true

[features]
default = ["tar", "zstd", "blake3"]
tar = []
zstd = []
blake3 = []
