[package]
name = "walk_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tabwriter = { workspace = true }
walkdir = { workspace = true }

[features]
default = ["color"]
color = []
